# KhepriEngine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CODING_STANDARDS.md  CONTRIBUTING.md  Doxyfile  LICENSE  MAINTAINERS.md  README.md  conanfile.py
.github/workflows/: main.yml
cmake/: ConvertBlender.cmake  ConvertShader.cmake  FindBlender.cmake
cmake/ConvertBlender/: ExportCollada.py
docs/: architecture.md  setting-up-ide.md  versioning.md
include/khepri/: exceptions.hpp  version.hpp  version_info.hpp
include/khepri/application/: application.hpp  console_logger.hpp  current_directory.hpp  exceptions.hpp  window.hpp
include/khepri/font/: exceptions.hpp  font.hpp  font_cache.hpp  font_face.hpp  font_face_desc.hpp  font_options.hpp
include/khepri/font/io/: font_face.hpp
include/khepri/io/: container_stream.hpp  exceptions.hpp  file.hpp  serialize.hpp  stream.hpp
include/khepri/log/: log.hpp
include/khepri/math/: bits.hpp  color_rgb.hpp  color_rgba.hpp  color_srgb.hpp  frustum.hpp  interpolator.hpp  math.hpp  matrix.hpp  plane.hpp  point.hpp  polynomial.hpp  quaternion.hpp  ray.hpp  rect.hpp  serialize.hpp  size.hpp  sphere.hpp  spline.hpp  vector2.hpp  vector3.hpp  vector4.hpp
include/khepri/physics/: collision_mesh.hpp
include/khepri/renderer/: camera.hpp  exceptions.hpp  material.hpp  material_desc.hpp  material_id.hpp  mesh.hpp  mesh_desc.hpp  mesh_id.hpp  mesh_instance.hpp  model.hpp  model_desc.hpp  renderable_mesh_id.hpp  renderable_mesh_instance.hpp  renderer.hpp  shader.hpp  shader_desc.hpp  shader_id.hpp  sprite.hpp  texture.hpp  texture_desc.hpp  texture_id.hpp
include/khepri/renderer/diligent/: renderer.hpp
include/khepri/renderer/io/: kmf.hpp  ksf.hpp  serialize.hpp  shader.hpp  texture.hpp
include/khepri/renderer/vulkan/: renderer.hpp
include/khepri/renderer/vulkan/detail/: device_info.hpp  memory.hpp
include/khepri/scene/: behavior.hpp  scene.hpp  scene_object.hpp
include/khepri/utility/: cache.hpp  enum.hpp  functional.hpp  signal.hpp  string.hpp  type_traits.hpp
scripts/: check-documentation.sh  format-files.sh  install-git-hooks.sh
scripts/git/: pre-commit
scripts/git/pre-commit.d/: check-documentation  check-filenames  check-format  check-tidy
src/: version.cpp  version_info.cpp
src/application/: application.cpp  console_logger.cpp  current_directory.cpp  exceptions.cpp  window.cpp
src/font/: font.cpp  font_cache.cpp  font_face.cpp  font_face_state.cpp  font_face_state.hpp
src/font/io/: font_face.cpp
src/io/: container_stream.cpp  file.cpp  stream.cpp
src/log/: log.cpp
src/math/: interpolator.cpp  matrix.cpp  quaternion.cpp  spline.cpp
src/physics/: collision_mesh.cpp
src/renderer/: camera.cpp  model.cpp  shader.cpp
src/renderer/diligent/: native_window.cpp  native_window.hpp  renderer.cpp  shader_stream_factory.hpp
src/renderer/io/: kmf.cpp  ksf.cpp  shader.cpp  texture.cpp  texture_dds.cpp  texture_tga.cpp
src/renderer/vulkan/: exceptions.hpp  logging.hpp  render.cpp  render_pipeline.hpp  renderable_mesh.hpp  renderer.cpp
src/scene/: scene_object.cpp
src/utility/: string.cpp
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
tests/: cubic_spline_test.cpp  interpolator_test.cpp  polynomial_test.cpp  printers.hpp  version_test.cpp
tools/: CMakeLists.txt
tools/dae2kmf/: CMakeLists.txt
tools/dae2kmf/src/: main.cpp
tools/glsl2ksf/: CMakeLists.txt
tools/glsl2ksf/src/: main.cpp
